finish recaptcha verify method, add loader to chat button, add react tostify lib

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -42,6 +42,9 @@
 
     gtag('config', 'G-HRTL79VXXV');
   </script>
+
+  <!--Google Recaptcha V3 -->
+  <script src="https://www.google.com/recaptcha/api.js?render=6LeCNaMfAAAAAHoQ2IUECzObltAFDUCeOU6oSFVQ"></script>
 </head>
 
 <body>
