add constants file in client, add gitattributes

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -44,7 +44,7 @@
   </script>
 
   <!--Google Recaptcha V3 -->
-  <script src="https://www.google.com/recaptcha/api.js?render=%REACT_APP_G_RECAPTCHA_SITE_KEY%"></script>
+  <script src="https://www.google.com/recaptcha/api.js?render=6LeCNaMfAAAAAHoQ2IUECzObltAFDUCeOU6oSFVQ"></script>
 </head>
 
 <body>
