add seo and OG tags

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,8 +5,14 @@
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="theme-color" content="#EC4747" />
+  <meta name="description" content="Talk to random people anywhere around the world. Chat with strangers live, get connected, and create engaging communications." />
+  <meta name="keywords" content="Chat, Online, Strangers, Talk, Live, Random">
+  <meta property=”og:title” content="Chat with Strangers Online" />
+  <meta property=”og:url” content=”https://strangertalks.online” />
+  <meta property=”og:type” content=”website” />
+  <meta property=”og:description” content="Talk to random people anywhere around the world. Chat with strangers live, get connected, and create engaging communications." />
+  <meta property=”og:image” content=”https://strangertalks.online/images/chat-illustration.svg” />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -28,7 +34,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&family=Poppins:wght@300;400;500&family=Ubuntu:wght@500&display=swap" rel="stylesheet">
-  <title>Stranger Talks</title>
+  <title>Chat with Strangers Live</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-HRTL79VXXV"></script>
