add og image tag

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,7 +12,8 @@
   <meta property="og:url" content="https://strangertalks.online" />
   <meta property="og:type" content="website" />
   <meta property="og:description" content="Talk to random people around the world. Chat with strangers live, get connected, and create engaging communications." />
-  <meta property="og:image" content="https://strangertalks.online/og-image.png" />
+  <meta property="og:image" content="http://strangertalks.online/og-image.png" />
+  <meta property="og:image:secure_url" content="https://strangertalks.online/og-image.png" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
