--- a/client/public/index.html
+++ b/client/public/index.html
@@ -34,7 +34,7 @@
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&family=Poppins:wght@300;400;500&family=Ubuntu:wght@500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&family=Poppins:wght@300;400;500&family=Ubuntu:wght@300;400;500&display=swap" rel="stylesheet">
   <title>Chat with Strangers Live</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
