--- a/client/public/index.html
+++ b/client/public/index.html
@@ -35,7 +35,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&family=Poppins:wght@300;400;500&family=Ubuntu:wght@300;400;500&display=swap" rel="stylesheet">
-  <title>Chat with Strangers Live</title>
+  <title>Chat with Strangers Online</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-HRTL79VXXV"></script>
