--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,12 +6,12 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#EC4747" />
-  <meta name="description" content="Talk to random people around the world. Chat with strangers live, get connected, and create engaging communications." />
+  <meta name="description" content="Talk to random people around the world. Chat with strangers online, get connected, and create engaging communications." />
   <meta name="keywords" content="Chat, Online, Strangers, Talk, Live, Random">
   <meta property="og:title" content="Chat with Strangers Online" />
   <meta property="og:url" content="https://strangertalks.online" />
   <meta property="og:type" content="website" />
-  <meta property="og:description" content="Talk to random people around the world. Chat with strangers live, get connected, and create engaging communications." />
+  <meta property="og:description" content="Talk to random people around the world. Chat with strangers online, get connected, and create engaging communications." />
   <meta property="og:image" content="http://strangertalks.online/og-image.png" />
   <meta property="og:image:secure_url" content="https://strangertalks.online/og-image.png" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
